--- a/gui/qt/ui/updatedialog.ui
+++ b/gui/qt/ui/updatedialog.ui
@@ -7,18 +7,18 @@
     <x>0</x>
     <y>0</y>
     <width>824</width>
-    <height>469</height>
+    <height>458</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string/>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>0</x>
      <y>390</y>
-     <width>171</width>
+     <width>821</width>
      <height>32</height>
     </rect>
    </property>
@@ -26,13 +26,16 @@
     <enum>Qt::Horizontal</enum>
    </property>
    <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+    <set>QDialogButtonBox::Ok</set>
+   </property>
+   <property name="centerButtons">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>100</x>
      <y>80</y>
      <width>611</width>
      <height>241</height>
@@ -67,7 +70,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="RefreshButton">
       <property name="text">
        <string>Refresh</string>
       </property>
