--- a/gui/qt/ui/aboutdialog.ui
+++ b/gui/qt/ui/aboutdialog.ui
@@ -36,6 +36,9 @@ p, li { white-space: pre-wrap; }
      <property name="standardButtons">
       <set>QDialogButtonBox::Ok</set>
      </property>
+     <property name="centerButtons">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
   </layout>
