--- a/gui/qt/uhuru.qrc
+++ b/gui/qt/uhuru.qrc
@@ -3,5 +3,6 @@
 <qresource prefix="/">
   <file>icons/uhuru.svg</file>
   <file>icons/clamav.ico</file>
+  <file>images/uhuru_am.png</file>
 </qresource>
 </RCC>
