--- a/gui/qt/ui/scanwidget.ui
+++ b/gui/qt/ui/scanwidget.ui
@@ -24,7 +24,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../uhuru.qrc">
-    <normaloff>:/icons/uhuru.svg</normaloff>:/icons/uhuru.svg</iconset>
+    <normaloff>:/icons/uhuru_grey.svg</normaloff>:/icons/uhuru_grey.svg</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
