--- a/gui/qt/uhuru.qrc
+++ b/gui/qt/uhuru.qrc
@@ -4,6 +4,6 @@
   <file>icons/uhuru_grey.svg</file>
   <file>icons/uhuru_white.svg</file>
   <file>icons/clamav.ico</file>
-  <file>images/uhuru_am.png</file>
+  <file>icons/uhuru_am.png</file>
 </qresource>
 </RCC>
