First version of the interface finished

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -122,4 +122,7 @@
     .OverflowTableQuarantaine {
       max-height: 220px;
       overflow: auto;
-    }     
+    }
+    .borderless th, .borderless td { 
+     border-top: none !important; 
+ }
