--- a/app/views/Information.html
+++ b/app/views/Information.html
@@ -3,7 +3,7 @@
 	  	<ul class="list-group">
 		  <li class="list-group-item list-height">
 		    <span class="text-success pull-right"><i class="fa fa-check-circle fa-2x"></i></span>
-		    <h6><b class="bg-success">Annalyse en temps réel</b></h6>
+		    <h6><b class="bg-success">Analyse en temps réel</b></h6>
 		  </li>
 		  <li class="list-group-item list-height">
 		    <span class="text-success pull-right"><i class="fa fa-check-circle fa-2x"></i></span>
