--- a/app/views/Parameters.html
+++ b/app/views/Parameters.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-primary">
   <div class="panel-body">
   	<div class="row">
 	  <div class="col-md-10 col-md-offset-1">
@@ -10,7 +10,7 @@
 			  	<br/>
 			  	<div class="row">
 				  <div class="col-md-10 col-md-offset-1">
-				  	<div class="panel panel-default">
+				  	<div class="panel panel-primary">
 					  <div class="panel-heading text-center">Content</div>
 					  <div class="panel-body">
 					     <uib-accordion-group is-open="status.open">
@@ -31,7 +31,7 @@
 			  	<br/>
 			  	<div class="row">
 				  <div class="col-md-10 col-md-offset-1">
-				  	<div class="panel panel-default">
+				  	<div class="panel panel-primary">
 					  <div class="panel-heading text-center">Content</div>
 					  <div class="panel-body">
 					    Panel content
@@ -47,7 +47,7 @@
 			  	<br/>
 			  	<div class="row">
 				  <div class="col-md-10 col-md-offset-1">
-				  	<div class="panel panel-default">
+				  	<div class="panel panel-primary">
 					  <div class="panel-heading text-center">Content</div>
 					  <div class="panel-body">
 					    Panel content
@@ -63,7 +63,7 @@
 			  	<br/>
 			  	<div class="row">
 				  <div class="col-md-10 col-md-offset-1">
-				  	<div class="panel panel-default">
+				  	<div class="panel panel-primary">
 					  <div class="panel-heading text-center">Content</div>
 					  <div class="panel-body">
 					    Panel content
