--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -56,8 +56,9 @@
 			  </div>
 			</div>
 		    <div class="form-group">
-		      <div class="col-xs-2 col-sm-4 col-lg-4 col-xs-offset-4 col-sm-offset-2 col-lg-offset-4">
-		        <button type="submit" ng-click="startMe()" class="btn btn-primary">Start scan</button>
+		      <div class="col-lg-10 col-lg-offset-2">
+		        <button type="submit" ng-click="startMe()" class="btn btn-primary">Start</button>
+		        <button ng-show="pdata.scan_progress > 0" type="submit" ng-click="stopMe()" class="btn btn-danger">Stop</button>
 		      </div>
 		    </div>
 		  </fieldset>
@@ -69,37 +70,22 @@
   	<div class="panel panel-primary panel-scanProgression">
 	  <div class="panel-body">
 	    <div class="row">
-    	  	<div class="col-xs-6 col-sm-6 col-md-6">
+    	  	<div class="col-xs-12 col-sm-12 col-md-12">
 	    	  	<!-- Progress bar-->
 	    	  	<label class="control-label">Scan progression</label>
 			    <uib-progressbar max="max" value="pdata.scan_progress"><span style="color:black; white-space:nowrap;">{{pdata.scan_progress}}%</span>
 		    	</uib-progressbar>   
     	  	</div>
-    	  	<div class="col-xs-6 col-sm-6 col-md-6">
-			  	<label class="control-label" for="disabledInput">Object courant</label>
-			  	<input class="form-control input-sm" ng-model="pdata.scan_file_path" id="disabledInput" type="text" disabled="">
-    	  	</div>
-	    </div>	  	
-	  	<hr>
+	    </div>
 	    <div >
-			  <!--[{"file_path":"/path/to/file","scan_status":"malware","scan_action":"alert+quarantine","mod_name":"clamav","mod_report":"Trojan.Mal32-77"}]-->
-	    	<div class="list-group">
-	    	  <div class="row">
-	    	  	<div class="col-xs-6 col-sm-6 col-md-6">
-    	  	      <a href="#" class="list-group-item">
-				    <h6 class="list-group-item-heading"><i class="fa fa-file-o pull-right"></i> Fichiers traités </h6>
-				    <p class="list-group-item-text">123</p>
-				  </a>
-	    	  	</div>
-	    	  	<div class="col-xs-6 col-sm-6 col-md-6">
-    	  		  <a href="#" class="list-group-item">
-				    <h6 class="list-group-item-heading"><i class="fa fa-clock-o pull-right"></i> Temps écoulé </h6>
-				    <p class="list-group-item-text">12 : 05 min</p>
-				    <br/>
-				  </a>
-	    	  	</div>
-	    	  </div>
-			</div>
+	    	<table class="table borderless">
+			  <tbody ng-repeat="obj in tableScan">
+			  	<tr>
+			      <td><i class="fa fa-clipboard"></i> {{obj.title}}</td>
+			      <td>{{obj.data}}</td>
+			    </tr>
+			  </tbody>
+			</table> 
 			<div class="panel panel-danger" ng-show="displayedCollection.length > 0">
 			  <div class="panel-heading">
 			  	<b> Menaces trouvées : {{displayedCollection.length}}</b>
@@ -119,12 +105,6 @@
 							<td>{{row.Etat}}</td>
 							<td>{{row.Detail}}</td>
 							<td>{{row.Chemin}}</td>
-							<td>
-							<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
-								<i class="glyphicon glyphicon-remove-circle">
-								</i>
-							</button>
-							</td>
 						</tr>
 						</tbody>
 					</table>
