--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -69,15 +69,19 @@
   <div class="col-xs-8 col-sm-8 col-md-8">
   	<div class="panel panel-primary panel-scanProgression">
 	  <div class="panel-body">
-	    <div class="row">
-    	  	<div class="col-xs-12 col-sm-12 col-md-12">
+	  	<div class="col-xs-12" ng-hide="pdata.scan_progress > 0">
+		  <label for="ex2">Chemin à analyser</label>
+		  <input class="form-control" id="ex2" type="text" ng-model="pathToScan" placeholder="Entrez le chemin d'un dossier à analyser...">
+		</div>
+	    <div class="row" ng-if="pdata.scan_progress > 0">
+    	  	<div class="col-xs-12 col-sm-12 col-md-12" >
 	    	  	<!-- Progress bar-->
 	    	  	<label class="control-label">Scan progression</label>
 			    <uib-progressbar max="max" value="pdata.scan_progress"><span style="color:black; white-space:nowrap;">{{pdata.scan_progress}}%</span>
 		    	</uib-progressbar>   
     	  	</div>
 	    </div>
-	    <div >
+	    <div ng-if="pdata.scan_progress > 0">
 	    	<table class="table borderless">
 			  <tbody ng-repeat="obj in tableScan">
 			  	<tr>
