Browsing folder improved

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -125,4 +125,23 @@
     }
     .borderless th, .borderless td { 
      border-top: none !important; 
- }
+    }
+    .btn-file {
+        position: relative;
+        overflow: hidden;
+    }
+    .btn-file input[type=file] {
+        position: absolute;
+        top: 0;
+        right: 0;
+        min-width: 100%;
+        min-height: 100%;
+        font-size: 100px;
+        text-align: right;
+        filter: alpha(opacity=0);
+        opacity: 0;
+        outline: none;
+        background: white;
+        cursor: inherit;
+        display: block;
+    }
