--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -69,15 +69,18 @@
   <div class="col-xs-8 col-sm-8 col-md-8">
   	<div class="panel panel-primary panel-scanProgression">
 	  <div class="panel-body">
-	  	<div class="col-xs-12">
-		  <label for="ex2">Dossier à analyser</label><br>
-		  <hr>
-		  <span class="btn btn-default btn-file">
-			Parcourir <input id="pathToScan" nwdirectory type="file">
-		   </span>
-		</div><br>
-		&nbsp; &nbsp; &nbsp; &nbsp; {{pathToScan}}
-		
+		<span ng-show="HideInputFile">
+			<div class="col-xs-12">
+				<div class="form-group">
+				  <label for="usr">Dossier à analyser:</label>
+				  <input type="text" ng-model="pathToScan" class="form-control" id="usr">
+				</div>
+			  <span class="btn btn-default btn-file">
+				Parcourir <input id="pathToScan" nwdirectory type="file">
+			   </span>
+			</div>
+			<!--&nbsp; &nbsp; &nbsp; &nbsp; {{pathToScan}}-->
+		</span>
 	    <div class="row" ng-if="pdata.scan_progress > 0" >
     	  	<div class="col-xs-12 col-sm-12 col-md-12" >
 	    	  	<!-- Progress bar-->
