ng-armadito :: restore file from quarantine.

--- a/app/views/Journal.html
+++ b/app/views/Journal.html
@@ -147,7 +147,7 @@
 									</button>
 								</td>
 								<td>
-									<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-success" title="Restore">
+									<button type="button" ng-click="restore_qurantine_file(file.fname)" class="btn btn-sm btn-success" title="Restore">
 										<i class="fa fa-reply">
 										</i>
 									</button>
