New interface finished at 80%

--- a/app/views/Information.html
+++ b/app/views/Information.html
@@ -1,6 +1,6 @@
+<!--
 <div class="row">	
 	<div class="col-xs-12 col-sm-12 col-md-12">
-	<button ng-click="refresh_status()">Refresh Av Status</button>
 	  	<ul class="list-group">
 		  <li class="list-group-item list-height">
 		    <span class="text-success pull-right"><i ng-class="state.realtime ? 'fa fa-check-circle fa-2x' : 'text-danger fa fa-times-circle fa-2x'"></i></span>
@@ -38,12 +38,83 @@
 			</ul>
 		  </div>
 		</div>
+	</div>  
+</div>
+-->
+<div class="container-fluid informationBackground">
+	<br>
+	<div class="row">
+	  <div class="col-xs-4 col-sm-4 col-md-4">
+	  <img alt="Tatoo" src="images/screenOk.png" class="img-responsive">
+	  </div>
+	  <div class="col-xs-4 col-sm-4 col-md-4">
+	  	<ul class="information">
+		  <li class="information"><h5><span class="informationLi">Analyse Temps Réel</span></h5></li>
+		  <li class="information"><h5><span class="informationLi">Service d'analyse</span></h5></li>
+		  <li class="information"><h5><span class="informationLi">Mise à jour des bases</span></li></h5></li>
+		  <li class="information"><h5><span class="informationLi">Dernière mise à jour :</span></h5></li>
+		</ul>
+	  </div>
+	  <div class="col-xs-4 col-sm-4 col-md-4">
+	  	<ul class="information">
+		  <li class="information2"><h5>
+		  	<input type="checkbox" name="checkbox1" id="checkbox1" class="ios-toggle" checked/>
+			<label for="checkbox1" class="checkbox-label" data-off="off" data-on="on"></label>
+		  </h5></li>
+		  <li class="information2"><h5><i class="fa fa-exclamation-triangle text-danger"></i></h5></li>
+		  <li class="information2"><h5><i class="fa fa-check checkIcon"></i>&nbsp;&nbsp;&nbsp;<i class="fa fa-refresh"></i></li></h5></li>
+		  <li class="information2"><h5><b>25/11/2016</b></h5></li>
+		</ul>
+	  </div>
 	</div>
-			  <!--<li class="list-group-item list-height">
-			    <span class="text-warning pull-right"><abbr title="update this module"><i class="fa fa-exclamation-circle fa-2x"></i></abbr></span>
-			    <h6><i class="bg-warning">Module PDF</h6></i>
-				
-			  </li>
-			  -->
-
+	<div class="row">
+		<div class="col-md-12">
+			<table class="table information">
+			    <thead class="information">
+			      <tr class="information">
+			        <th clas="information" style="width:40%"><h4><i class="informationTitle">Modules</i></h4></th>
+			        <th class="information" style="width:60%"><h4><i class="informationTitle">Date</i></h4></th>
+			      </tr>
+			    </thead>
+			    <tbody class="information" id="ex3">
+			      <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2016</h7></td>
+			      </tr>
+				  <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2017</h7></td>
+			      </tr>
+			      <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2018</h7></td>
+			      </tr>
+			      <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2016</h7></td>
+			      </tr>
+				  <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2017</h7></td>
+			      </tr>
+			      <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2018</h7></td>
+			      </tr>
+			      <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2016</h7></td>
+			      </tr>
+				  <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2017</h7></td>
+			      </tr>
+			      <tr class="information">
+			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:60%"class="information"><h7>04/15/2018</h7></td>
+			      </tr>
+			    </tbody>
+			</table>
+		</div>
+	</div>
 </div>
