--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -1,3 +1,4 @@
+<!--
 <div class="row">
   <div class="col-xs-4 col-sm-4 col-md-4">
   	<div class="panel panel-primary panel-option-scan">
@@ -79,11 +80,9 @@
 				Parcourir <input id="pathToScan" nwdirectory type="file">
 			   </span>
 			</div>
-			<!--&nbsp; &nbsp; &nbsp; &nbsp; {{pathToScan}}-->
 		</span>
 	    <div class="row" ng-if="pdata.scan_progress > 0" >
     	  	<div class="col-xs-12 col-sm-12 col-md-12" >
-	    	  	<!-- Progress bar-->
 	    	  	<label class="control-label">Scan progression</label>
 			    <uib-progressbar max="max" value="pdata.scan_progress"><span style="color:black; white-space:nowrap;">{{pdata.scan_progress}}%</span>
 		    	</uib-progressbar>   
@@ -127,6 +126,120 @@
 	  </div>
 	</div>
   </div>
+</div>-->
+<br>
+<div class="container-fluid">
+	<div class="row">
+		<form class="form-horizontal">
+	        <div class="col-xs-12 col-sm-12 col-md-12 form-group">
+	            <label class="control-label col-xs-3 col-sm-3 col-md-3"><i class="analyseTitle">Analyse </i></label>
+	            <div class="col-xs-6 col-sm-6 col-md-6">
+	               <div class="btn-group btn-block" uib-dropdown>
+				      <button id="split-button" type="button" class="btn analyseChoice" ng-model="type">{{type}}</button>
+				      <button type="button" class="btn analyseChoice" uib-dropdown-toggle>
+				        <span class="fa fa-angle-down fa-lg"></span>
+				      </button>
+				      <ul uib-dropdown-menu role="menu" aria-labelledby="split-button">
+				        <li role="menuitem" ng-model="type"><a href="" ng-click="analyseComplete()"><i class="fa fa-hdd-o"></i>&nbsp;&nbsp;COMPLÈTE</a></li>
+				        <li role="menuitem" ng-model="type"><a href="" ng-click="analyseRapide()"><i class="fa fa-bolt"></i>&nbsp;&nbsp;RAPIDE </a></li>
+				        <li class="divider" ></li>
+				        <li role="menuitem" ng-model="type"><a href="" ng-click="analysePersonnalisee()"><i class="fa fa-plus"></i>&nbsp;&nbsp;PERSONALISÉE</a></li>
+				      </ul>
+				    </div>
+	            </div>
+	            <div class="col-xs-3 col-sm-3 col-md-3">
+	            	<!--<button type="button" class="btn stopButton">STOP</button>-->
+	            	<button type="button" class="btn startButton">START</button>
+	            </div>
+	        </div>
+	    </form>
+	</div>
+	<br>
+	<div class="row" >
+	  	<div class="col-sm-offset-1 col-md-offset-1 col-xs-10 col-sm-10 col-md-10" >
+		    <uib-progressbar max="max" class="progressBar" value="pdata.scan_progress"><span class="progressBarPercent">{{pdata.scan_progress}}%</span>
+	    	</uib-progressbar>   
+	  	</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-offset-1 col-md-offset-1 col-xs-12 col-sm-10 col-md-10 text-center">
+			<div class="col-xs-4 col-sm-4 col-md-4">
+				<h1><b class="fileAnalyse">0</b></h1>
+			</div>
+			<div class="col-xs-4 col-sm-4 col-md-4">
+				<h1><b class="fileMalicious">0</b></h1>
+			</div>
+			<div class="col-xs-4 col-sm-4 col-md-4">
+				<h1><b class="fileSuspect">0</b></h1>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-offset-1 col-md-offset-1 col-xs-12 col-sm-10 col-md-10 text-center">
+			<div class="col-xs-4 col-sm-4 col-md-4">
+				<h5 class="numberOfAnalyseFile">Analysés</h5>
+			</div>
+			<div class="col-xs-4 col-sm-4 col-md-4">
+				<h5 class="numberOfMaliciousFile">Malicieux</h5>
+			</div>
+			<div class="col-xs-4 col-sm-4 col-md-4">
+				<h5 class="numberOfSuspectFile">Suspects</h5>
+			</div>
+		</div>
+	</div>
+	<div class="row">	
+		<br>
+		<br>
+		<div class=" col-sm-4 col-md-4 col-sm-offset-4 col-md-offset-4">
+			Aucun fichier analysé
+		</div>
+	</div>
+	<div class="row">
+		<!--
+		<div class="col-xs-1 col-sm-1 col-md-1">
+		
+		</div>
+		<div class="col-xs-11 col-sm-11 col-md-11">
+			<table class="table analyse">
+			    <tbody class="analyse" id="ex3">
+			      <tr class="analyse">
+			      	<td style="width:10%" class="analyse redCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
+			        <td style="width:30%" class="analyse"><h7>pdf.nomdefichier</h7></td>
+			        <td style="width:60%"class="analyse"><h7>ZTE-2015-dd542fggh44e648dd545.pdf</h7></td>
+			      </tr>
+				  <tr class="analyse">
+			      	<td style="width:10%" class="analyse redCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
+			        <td style="width:30%" class="analyse"><h7>pdf.nomdefichier</h7></td>
+			        <td style="width:60%"class="analyse"><h7>OMD-2648-5154dfgggtdfr45.pdf</h7></td>
+			      </tr>
+			      <tr class="analyse">
+			      	<td style="width:10%" class="analyse yellowCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
+			        <td style="width:30%" class="analyse"><h7>pdf.nomdefichier</h7></td>
+			        <td style="width:60%"class="analyse"><h7>FRD-2013-dfggh44edd545.pdf</h7></td>
+			      </tr>
+			      <tr class="analyse">
+			      	<td style="width:10%" class="analyse yellowCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
+			        <td style="width:30%" class="analyse"><h7>pdf.nomdefichier</h7></td>
+			        <td style="width:60%"class="analyse"><h7>CVE-2011-26485154dfggh44edd545.pdf</h7></td>
+			      </tr>
+			       <tr class="analyse">
+			      	<td style="width:10%" class="analyse yellowCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
+			        <td style="width:30%" class="analyse"><h7>pdf.nomdefichier</h7></td>
+			        <td style="width:60%"class="analyse"><h7>CVE-2011-2648515444ed4s4e4g.pdf</h7></td>
+			      </tr>
+			       <tr class="analyse">
+			      	<td style="width:10%" class="analyse yellowCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
+			        <td style="width:30%" class="analyse"><h7>pdf.nomdefichier</h7></td>
+			        <td style="width:60%"class="analyse"><h7>CVE-2011-26485154dfggh44edd545.pdf</h7></td>
+			      </tr>
+			      <tr class="analyse">
+			      	<td style="width:10%" class="analyse redCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
+			        <td style="width:30%" class="analyse"><h7>pdf.nomdefichier</h7></td>
+			        <td style="width:60%"class="analyse"><h7>CVE-2011-ss4dfggh44eds45s.pdf</h7></td>
+			      </tr>
+			    </tbody>
+			</table>
+		</div>
+		-->
+	</div>
 </div>
-
-
